--- a/media/_themes/unm-v1-2col/media-screen.css.d/body-2col.css
+++ b/media/_themes/unm-v1-2col/media-screen.css.d/body-2col.css
@@ -4,6 +4,10 @@
   font-size: 0.8em;
   border-radius: $(border_radius_accent);
 
+  .digraph-area-wrapper {
+    padding: 0 $(spacing_base);
+  }
+
   form.search-form {
     font-size: 0.5em;
   }
